modified dawn-breakers docs

--- a/html/report-Dawn-Breakers-Romanian.html
+++ b/html/report-Dawn-Breakers-Romanian.html
@@ -192,7 +192,7 @@
 </p>
 <p>
     <i>A cincea Slovă a Celui Viu:</i>
-    Mullá <u>Kh</u>udá-Ba<u>khsh</u>-i-Qúchání (mai târziu numit Mullá ‘Alí)<i></i>
+    Mullá <u>Kh</u>udá-Ba</u>kh</u><u>sh</u>-i-Qúchání (mai târziu numit Mullá ‘Alí)<i></i>
 </p>
 <p>
     <i>A şasea Slovă a Celui Viu:</i>
@@ -1946,7 +1946,7 @@ Profeţii au fost aduşi şi martorii veniră; şi judecata a fost împărţită
     de ‘Arafih, mormântul lui Imám Ḥusayn. În acel an, ultimul an al vieţii sale, potrivit obiceiului său, el a părăsit Karbilá în primele zile ale lunii
     dhi’l-Qa’dih, în anul 1259 A.H.<a name="footnote-2341-60-backlink"></a><a href="#footnote-2341-60">60</a>, însoţit de câţiva dintre însoţitorii şi
     prietenii lui. În ziua a patra a acelei luni, el ajunsese la Masjid-i-Bará<u>th</u>á, situat pe şoseaua dintre Ba<u>gh</u>dád şi Káẓimayn, în momentul când
-    trebuia să ofere rugăciunea din miezul zilei. L-a rugat pe mua<u>dhdh</u>in să-i cheme pe credincioşi să se adune şi să se roage. Stând la umbra unui
+    trebuia să ofere rugăciunea din miezul zilei. L-a rugat pe mua</u>dh</u><u>dh</u>in să-i cheme pe credincioşi să se adune şi să se roage. Stând la umbra unui
     palmier care era în faţa masjid-ului, el s-a alăturat congregaţiei şi tocmai îşi încheiase rugăciunea când, dintr-o dată, a apărut un arab care s-a
     apropiat de Siyyid şi l-a îmbrăţişat.
 </p>
@@ -2257,7 +2257,7 @@ siguranţă:′Acest sărman tânăr şi-a pierdut minţile.′› În acel mome
     acea ospitalitate de o înaltă calitate şi bunătate iubitoare pe care, eram sigur că, nicio altă fiinţă omenească nu ar fi fost capabilă să le arate.»
 </p>
 <p>
-    «Stăteam acolo, fermecat de rostirile Lui, dând uitării ora sau pe cei care mă aşteptau. Dintr-o dată, anunţul mua<u>dhdh</u>in-ului ce chema credincioşii
+    «Stăteam acolo, fermecat de rostirile Lui, dând uitării ora sau pe cei care mă aşteptau. Dintr-o dată, anunţul mua</u>dh</u><u>dh</u>in-ului ce chema credincioşii
     la rugăciunea de dimineaţă mă trezi din starea de extaz în care părea că mă cufundasem. Toate deliciile, toate gloriile inefabile pe care Preaputernicul le
     menţiona în Cartea Lui ca fiind bogăţiile nepreţuite ale celor ce sălăşluiesc în Paradis – toate acestea parcă le trăisem în acea noapte. Mi se părea că
     fusesem într-un loc despre care se putea cu adevărat spune: ‹Înlăuntrul hotarelor lui nicio greutate nu ne poate ajunge şi nicio grijă nu ne poate atinge›;
@@ -2572,7 +2572,7 @@ puritatea caracterului Său, despre farmecul purtării Sale, despre înalta Sa i
     Mullá ‘Alíy-i-Basṭámí
 </p>
 <p>
-    Mullá <u>Kh</u>udá-Ba<u>khsh</u>-i-Qú<u>ch</u>ání, mai târziu numit Mullá ‘Alí
+    Mullá <u>Kh</u>udá-Ba</u>kh</u><u>sh</u>-i-Qú<u>ch</u>ání, mai târziu numit Mullá ‘Alí
 </p>
 <p>
     Mullá Ḥasan-i-Bajistání,
@@ -8315,7 +8315,7 @@ vecinătate.<a name="footnote-2341-392-backlink"></a><a href="#footnote-2341-392
 <p>
     Armata Prinţului Mihdí-Qulí Mírzá continuă pentru câteva zile să tragă în direcţia fortului. Oamenii lui erau miraţi să vadă că bombardamentul tunurilor
     lor nu reuşise să reducă la tăcere vocea care se ruga şi aclamaţiile de bucurie pe care cei asediaţi le înălţau ca răspuns la ameninţările lor. În loc de
-    capitularea necondiţionată pe care o aşteptau, chemarea mua<u>dhdh</u>in-ului<a name="footnote-2341-395-backlink"></a><a href="#footnote-2341-395">395</a>,
+    capitularea necondiţionată pe care o aşteptau, chemarea mua</u>dh</u><u>dh</u>in-ului<a name="footnote-2341-395-backlink"></a><a href="#footnote-2341-395">395</a>,
     cântarea versetelor Qur’án-ului şi refrenul vocilor pline de bucurie care intonau imnuri de mulţumire şi laudă le ajungeau la urechi fără încetare.
 </p>
 <p>
@@ -13667,7 +13667,7 @@ conducătoare ale Europei. Nu îşi imagina, cu toată lauda pe care i-a adus-o 
     8. 8. The Kitáb-i-Asmá’
 </p>
 <p>
-    9. 9. Ṣaḥífiy-i-Ma<u>khdh</u>úmíyyih
+    9. 9. Ṣaḥífiy-i-Ma</u>kh</u><u>dh</u>úmíyyih
 </p>
 <p>
     10. 10. Ṣaḥífiy-i-Ja‘faríyyih
@@ -17163,7 +17163,7 @@ este şi nu a fost al Bayán-ului şi niciun păcat nu poate fi mai mare pentru 
     stârneşte, poate prin asociere, ideea de solemnitate profundă; la fel şi trompeta care reverberează în câmpie când scoate dragonul din mormântul său; dar,
     mai presus de acestea două, în copleşitor respect, sunt bocetele care se împrăştie până departe de pe pajiştile şi dealurile din Munster, anunţând că un
     galez s-a reunit cu strămoşii lui. Adhanul trezeşte altfel de emoţii. Trezeşte în conştiinţă un amestec de trăiri, de demnitate, solemnitate şi pioşenie,
-    în comparaţie cu care sunetul clopotului devine lipsit de importanţă. Este un lucru impunător să auzi în puterea nopţii primele sunete ale mua<u>dhdh</u>
+    în comparaţie cu care sunetul clopotului devine lipsit de importanţă. Este un lucru impunător să auzi în puterea nopţii primele sunete ale mua</u>dh</u><u>dh</u>
     in-ului care proclamă «Alláh-u-Akbar – Puternic este Dumnezeu – Mărturisesc că nu există niciun alt Dumnezeu în afară de Dumnezeu!» Catedralele St. Peter
     şi St. Paul împreună nu pot desăvârşi ceva asemănător.” („Glimpses of Life and Manners in Persia”, p. 84, 85.)
 </p>
@@ -19126,7 +19126,7 @@ lângă el arătară că nu erau înclinaţi să ia parte în acest război. Pri
 relatate în jurnalul asediului, este aceea care a avut loc în a cincea zi a Ramaḍán-ului. Muṣṭafá <u>Kh</u>án, Qájár, cu regimentul cincisprezece al lui    <u>Sh</u>ig<u>ágh</u>í Ṣadru’d-Dawlih şi cu călăreţii săi din <u>Kh</u>amsíh; Siyyid ‘Alí <u>Kh</u>án din Fírúz-Kúh cu propriul său regiment; Muḥammad-Áqá,
     colonel, alături de cavaleria Af<u>sh</u>ár; Maiorul Nabí Big cu cavaleria şi un detaşament format din cetăţeni loiali din Zanján; toţi aceşti oameni
     atacară în zorii zilei fortificaţiile bábí-ilor. Rezistenţa bábí-ilor a fost teribilă, dar dezastruoasă. Ei şi-au văzut pe cei mai buni dintre conducătorii
-lor căzând unul după altul, conducători curajoşi şi adevăraţi, sfinţi care nu puteau fi înlocuiţi: Núr-‘Alí vânătorul; Ba<u>khsh</u>-‘Alí dulgherul;    <u>Kh</u>udádád şi Fatḥú’lláh Big, toţi indispensabili în obţinerea victoriei. Toţi au căzut, unii în timpul dimineţii, iar alţii seara.” (Comte de
+lor căzând unul după altul, conducători curajoşi şi adevăraţi, sfinţi care nu puteau fi înlocuiţi: Núr-‘Alí vânătorul; Ba</u>kh</u><u>sh</u>-‘Alí dulgherul;    <u>Kh</u>udádád şi Fatḥú’lláh Big, toţi indispensabili în obţinerea victoriei. Toţi au căzut, unii în timpul dimineţii, iar alţii seara.” (Comte de
     Gobineau, „Les Religions et les Philosophies dans l’Asie Centrale”, p. 200.)
 </p>
 <p>
