--- a/tests/index.html
+++ b/tests/index.html
@@ -17,6 +17,9 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/diacritical_spec.js" charset="UTF-8"></script>
 
+  <!-- include data file for test script -->
+  <script type="text/javascript" src="spec/test_dictionary.js" charset="UTF-8"></script>
+
 </head>
 
 <body>
